<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jimmy.mushroomseeker.MainActivity"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:src="@drawable/title"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <RelativeLayout
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:id="@+id/buttonPlay"
                android:textColor="@color/colorWhite"
                android:text="@string/play_button"
                android:layout_centerInParent="true"
                android:background="@drawable/roundbutton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <Button
                android:id="@+id/buttonOption"
                android:layout_marginTop="5dp"
                android:text="@string/options_button"
                android:textColor="@color/colorWhite"
                android:layout_below="@id/buttonPlay"
                android:background="@drawable/roundbutton"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

            <Button
                android:id="@+id/buttonHelp"
                android:layout_marginTop="5dp"
                android:text="@string/help_button"
                android:textColor="@color/colorWhite"
                android:layout_below="@+id/buttonOption"
                android:layout_centerInParent="true"
                android:background="@drawable/roundbutton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
